// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilesList renders the uploaded files list 1`] = `
<div
  className="list-group shadow"
>
  <Trail
    from={
      Object {
        "opacity": 0,
        "transform": "translate3d(60px,0,0)",
      }
    }
    items={Array []}
    keys={[Function]}
    to={
      Object {
        "opacity": 1,
        "transform": "translate3d(0px,0,0)",
      }
    }
  >
    <Component />
  </Trail>
</div>
`;

exports[`FilesList renders the uploaded files list 2`] = `
<div
  className="list-group shadow"
>
  <Trail
    from={
      Object {
        "opacity": 0,
        "transform": "translate3d(60px,0,0)",
      }
    }
    items={
      Array [
        Object {
          "name": "file1",
        },
        Object {
          "name": "file2",
        },
        Object {
          "name": "file3",
        },
      ]
    }
    keys={[Function]}
    to={
      Object {
        "opacity": 1,
        "transform": "translate3d(0px,0,0)",
      }
    }
  >
    <Component />
  </Trail>
</div>
`;
